# axfluxmdo

./: .gitignore  .venv  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: getting-started.md  index.md  limitations.md
docs/api/: core.md  geometry.md  index.md  materials.md  models.md  optimize.md  solvers.md  validation.md  viz.md
docs/guide/: analytical-model.md  annular-model.md  fea-validation.md  optimization.md  surrogates-bo.md  viz-3d.md
examples/: 01_basic_axial_flux_motor.ipynb  01_basic_axial_flux_motor.py  02_pole_pair_tradeoff.ipynb  02_pole_pair_tradeoff.py  03_annular_efficiency_map.ipynb  03_annular_efficiency_map.py  04_air_gap_sensitivity.ipynb  04_air_gap_sensitivity.py  05_torque_density_optimization.ipynb  05_torque_density_optimization.py  06_gmsh_export.ipynb  06_gmsh_export.py  07_bayesian_optimization.ipynb  07_bayesian_optimization.py  08_3d_animation.ipynb  08_3d_animation.py
src/axfluxmdo/: __init__.py  limits.py  operating_point.py  sweeps.py
src/axfluxmdo/geometry/: __init__.py  axial_flux.py  tolerances.py
src/axfluxmdo/materials/: __init__.py  electrical.py  magnetic.py
src/axfluxmdo/models/: __init__.py  analytical.py  annular_2p5d.py  base.py  constraints.py  efficiency_map.py  losses.py  thermal_rc.py
src/axfluxmdo/optimize/: __init__.py  bayesopt.py  dataset.py  openmdao_components.py  problem.py  pymoo_runner.py  sensitivity.py  surrogate.py
src/axfluxmdo/solvers/: __init__.py  getdp_runner.py  getdp_templates.py  gmsh_export.py  results_parser.py
src/axfluxmdo/validation/: __init__.py  sim2real.py
src/axfluxmdo/viz/: __init__.py  bayesopt.py  fields.py  geometry_plot.py  pareto.py  pyvista_3d.py  sensitivity.py
tests/: conftest.py  test_analytical.py  test_annular.py  test_bayesopt.py  test_constraints.py  test_dataset.py  test_efficiency_map.py  test_geometry.py  test_getdp_runner.py  test_gmsh_export.py  test_import_hygiene.py  test_materials.py  test_openmdao.py  test_optimize_problem.py  test_pymoo_runner.py  test_pyvista_3d.py  test_regression.py  test_sensitivity.py  test_sim2real.py  test_solvers_import.py  test_surrogate.py  test_sweeps.py  test_thermal.py  test_tolerances.py  test_viz.py
