[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axfluxmdo"
version = "0.7.0"
description = "Parametric modeling, analysis, and multidisciplinary design optimization of axial-flux permanent-magnet motors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "John Hodge", email = "jhodge007@gmail.com" }]
keywords = [
    "axial-flux",
    "permanent-magnet",
    "motor-design",
    "electromagnetics",
    "MDO",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
opt = [
    "pymoo>=0.6.1.1",
    "openmdao>=3.30",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]
fea = [
    "gmsh>=4.11",
]
viz3d = [
    "pyvista>=0.44",
    "imageio>=2.28",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-jupyter>=0.25",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.4",
    "jupytext",
    "nbconvert",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/jman4162/axfluxmdo"
Repository = "https://github.com/jman4162/axfluxmdo"
Documentation = "https://github.com/jman4162/axfluxmdo#readme"
Issues = "https://github.com/jman4162/axfluxmdo/issues"
Changelog = "https://github.com/jman4162/axfluxmdo/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/axfluxmdo"]

[tool.hatch.build.targets.sdist]
# Keep examples/docs in the sdist (portfolio value); exclude local junk that
# iCloud or tooling may drop into the working tree.
exclude = [
    ".venv*",
    "examples/output",
    ".github",
    ".claude",
    "site",
    "docs/examples",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY"]

[tool.ruff.lint.per-file-ignores]
# Bare expressions are notebook display cells; mid-file imports are notebook narrative
"examples/*" = ["B018", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
